[package]
name = "randomstring"
version = "1.0.0"
authors = ["Steven Berg <steven@stevenberg.net>"]
edition = "2021"
description = "Print a string of random characters with dash-separated segments."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
rand = "0.8.5"
